--- a/styles.css
+++ b/styles.css
@@ -1,35 +1,28 @@
-/*  your css code here. If applicable */
-.container{
-	width:80%;
-	height:200px;
-	border:5px solid black;
-	display:flex;
-	justify-content:center;
-	align-items:center;
-	border-radius:50px;
-	background-color:gray;
-}
+.container {
+            width: 300px;
+            margin: 50px auto;
+            padding: 20px;
+            border: 2px solid black;
+            border-radius: 10px;
+            text-align: center;
+			background-color:lightgray
+        }
 
-#same1{
-	width:100px;
-	background-color:green;
-	height:50%;
-	border-radius:50%;
-	margin:6px;
-}
+        .red, .green, .yellow {
+            display: inline-block;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            margin: 5px;
+        }
 
-#same2{
-	width:100px;
-	background-color:yellow;
-	height:50%;
-	border-radius:50%;
-	margin:6px;
-}
+        .red {
+            background-color: red;
+        }
 
-#same3{
-	width:100px;
-	background-color:red;
-	height:50%;
-	border-radius:50%;
-	margin:6px;
-}
+        .green {
+            background-color: green;
+        }
+
+        .yellow {
+            background-color: yellow;
